Fixed CV timeline layout issues

--- a/src/css/cv.css
+++ b/src/css/cv.css
@@ -30,9 +30,16 @@ section#curriculumvitae .timeline {
     gap: 1em;
     display: flex;
     flex-direction: column;
-    margin: 0 auto;
     height: 100%;
 }
+
+/*section#curriculumvitae .timeline#edu {
+    margin: 0 auto;
+}
+
+section#curriculumvitae .timeline#work {
+    margin-left: auto;
+}*/
 
 section#curriculumvitae #work {
     margin: 0 auto 0 8rem;
